<resources>
    <string name="app_name">AudiNUS</string>
    <string name="Title">AudiNUS</string>
    <string name="no_songs_found">Why not add some songs to your library?</string>
    <string name="songs">Songs</string>
    <string name="playlists">Playlists</string>
    <string name="favorites">Favorites</string>
    <string name="NoSongBottomBarText">No song playing</string>
    <string name="kHz">kHz</string>
    <string name="no_playlists_text">Try creating a playlist?</string>
    <string name="editTags">Edit tags</string>
    <string name="queue">Queue</string>
    <string name="addToQueue">Add to queue</string>
    <string name="remove_from_queue">Remove from queue</string>
    <string name="slider_hint">Tap on album art/music note for more options</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="composer">Composer</string>
    <string name="year">Year</string>
    <string name="disc_number">Disc number</string>
    <string name="track_number">Track number</string>
    <string name="comment">Comment</string>
    <string name="playlist_name">Playlist name</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="your_queue_is_empty">Your queue is empty</string>
    <string name="rename">Rename</string>

</resources>