<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.sothree.slidinguppanel.SlidingUpPanelLayout
        android:id="@+id/sliding_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        app:umanoDragView="@+id/dragView"
        app:umanoOverlay="true"
        app:umanoPanelHeight="68dp"
        app:umanoParalaxOffset="100dp"
        app:umanoShadowHeight="4dp">

        <!-- MAIN CONTENT -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/views"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/viewpager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tabIconTint="@color/your_color_selector"
                app:tabIndicatorAnimationMode="elastic"
                app:tabIndicatorColor="?attr/colorAccent"
                app:tabSelectedTextColor="?attr/colorAccent"
                app:tabTextColor="?android:attr/textColorPrimary">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/songs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/library_music_48px"
                    android:text="@string/songs" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/playlists"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/queue_music_48px"
                    android:text="@string/playlists" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/favorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/favorite_48px"
                    android:text="@string/favorites" />
            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:importantForAccessibility="no"
                app:layout_constraintTop_toBottomOf="@+id/views"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="60dp">
            </androidx.viewpager.widget.ViewPager>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- SLIDING LAYOUT -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?colorPrimary"
            android:configChanges="orientation|keyboardHidden">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/currently_playing_bar"
                android:name="com.orbital.audinus.BottomBarFragment"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/album_art2"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:importantForAccessibility="no"
                android:padding="20dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/currently_playing_bar"
                app:layout_constraintVertical_bias="0.204" />

            <SeekBar
                android:id="@+id/seek_bar2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="49dp"
                android:layout_marginEnd="45dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/album_art2" />

            <ImageView
                android:id="@+id/previous2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="122dp"
                android:src="@drawable/skip_previous_48px"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/pause_play2"
                app:layout_constraintTop_toBottomOf="@+id/total_time2" />

            <ImageView
                android:id="@+id/next2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="122dp"
                android:src="@drawable/skip_next_48px"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/pause_play2"
                app:layout_constraintTop_toBottomOf="@+id/total_time2" />

            <ImageView
                android:id="@+id/pause_play2"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginBottom="112dp"
                android:src="@drawable/pause_48px"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/total_time2" />

            <TextView
                android:id="@+id/current_time2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="@+id/seek_bar2"
                app:layout_constraintTop_toBottomOf="@+id/seek_bar2"
                tools:text="0:00" />

            <TextView
                android:id="@+id/total_time2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="@+id/seek_bar2"
                app:layout_constraintTop_toBottomOf="@+id/seek_bar2"
                tools:text="0:00" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="Clear View: Click album art for more functions"
                app:layout_constraintBottom_toBottomOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.sothree.slidinguppanel.SlidingUpPanelLayout>
</androidx.constraintlayout.widget.ConstraintLayout>